[package]
name = "pinocchio-reserve-circuit-breaker"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
bpf-entrypoint = ["pinocchio/alloc"]

[dependencies]
pinocchio = { version = "0.11.1", default-features = false }
pinocchio-token = "0.6.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
